add binary mode

--- a/systemd/pytuntaphttp-client.service
+++ b/systemd/pytuntaphttp-client.service
@@ -6,7 +6,7 @@ After=nginx.service
 Environment=
 Type=simple
 PrivateTmp=true
-ExecStart=/usr/local/sbin/pytuntaphttp.py -s 3001 -b
+ExecStart=/usr/local/sbin/pytuntaphttp.py -a /etc/pytuntap_passwd.txt -b -c https://home.dyn.vogel.cx/vpn/
 Restart=no
 User=tunnel
 SupplementaryGroups=tunnel
