--- a/systemd/pytuntaphttp-server.service
+++ b/systemd/pytuntaphttp-server.service
@@ -6,7 +6,7 @@ After=nginx.service
 Environment=
 Type=simple
 PrivateTmp=true
-ExecStart=/usr/local/sbin/pytuntaphttp.py -s 3001 -b
+ExecStart=/usr/local/sbin/pytuntaphttp.py -s 3001 -b -e
 Restart=no
 User=tunnel
 SupplementaryGroups=tunnel
